Added message when article is saved [#22]

--- a/ui/src/components/articles/Article.css
+++ b/ui/src/components/articles/Article.css
@@ -8,3 +8,17 @@ img {
 i {
   color: gray;
 }
+
+.alert-success {
+  color: green;
+}
+
+.alert-shown {
+  opacity: 1;
+  transition: all 250ms linear;
+}
+
+.alert-hidden {
+  opacity: 0;
+  transition: all 250ms linear;
+}
